--- a/app/src/main/res/layout/activity_other.xml
+++ b/app/src/main/res/layout/activity_other.xml
@@ -1,67 +1,150 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/col_product_name"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TableLayout
-        android:id="@+id/table"
-        android:layout_width="224dp"
-        android:layout_height="430dp"
-        tools:layout_editor_absoluteX="1dp"
-        tools:layout_editor_absoluteY="148dp">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </TableLayout>
-
-    <TableLayout
-        android:id="@+id/table2"
-        android:layout_width="246dp"
-        android:layout_height="432dp"
-        android:layout_marginLeft="-59dp"
-        android:layout_toRightOf="@+id/table">
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-
-        <TableRow
-            android:layout_width="match_parent"
-            android:layout_height="match_parent" />
-    </TableLayout>
+    <com.ekn.gruzer.gaugelibrary.HalfGauge
+        android:id="@+id/halfGauge"
+        android:layout_width="384dp"
+        android:layout_height="292dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="80dp"
+        tools:layout_conversion_absoluteHeight="160dp"
+        tools:layout_conversion_absoluteWidth="439dp" />
 
     <TextView
         android:id="@+id/monthly_cost"
-        android:layout_width="400dp"
-        android:layout_height="40dp"
+        android:layout_width="339dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/halfGauge"
+        android:layout_alignEnd="@+id/halfGauge"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="23dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginBottom="302dp"
+        android:text="TextView"
+        android:textColor="#454545"
+        android:textSize="20sp"
+        app:autoSizeMaxTextSize="30dp"
+        tools:layout_conversion_absoluteHeight="35dp"
+        tools:layout_conversion_absoluteWidth="371dp" />
+
+    <TextView
+        android:id="@+id/monthly_cost2"
+        android:layout_width="139dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/halfGauge"
+        android:layout_alignEnd="@+id/halfGauge"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="213dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="83dp"
+        android:text="€ this month"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:autoSizeMaxTextSize="30dp"
+        tools:layout_conversion_absoluteHeight="35dp"
+        tools:layout_conversion_absoluteWidth="371dp" />
+
+    <TextView
+        android:id="@+id/monthly_cost3"
+        android:layout_width="139dp"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/halfGauge"
+        android:layout_alignEnd="@+id/halfGauge"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="28dp"
+        android:layout_marginEnd="217dp"
+        android:layout_marginBottom="83dp"
+        android:text="You have wasted"
+        android:textColor="#000000"
+        android:textSize="18sp"
+        app:autoSizeMaxTextSize="30dp"
+        tools:layout_conversion_absoluteHeight="35dp"
+        tools:layout_conversion_absoluteWidth="371dp" />
+
+    <ScrollView
+        android:id="@+id/scroll_view"
+        android:layout_width="wrap_content"
+        android:layout_height="388dp"
+        android:layout_above="@+id/halfGauge"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="6dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginBottom="-35dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TableLayout
+                android:id="@+id/table"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:dividerPadding="3dp"
+                android:overScrollMode="ifContentScrolls">
+
+                <TableRow
+                    android:id="@+id/row"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:accessibilityLiveRegion="none"
+                    android:background="#7FC1ED"
+                    android:visibility="visible">
+
+                    <TextView
+                        android:id="@+id/col_product"
+                        android:layout_width="122dp"
+                        android:layout_height="wrap_content"
+                        android:text="Product"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/col_amount"
+                        android:layout_width="72dp"
+                        android:layout_height="wrap_content"
+                        android:text="Amount"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/col_unit"
+                        android:layout_width="80dp"
+                        android:layout_height="match_parent"
+                        android:text="Unit"
+                        android:textSize="16sp" />
+
+                    <TextView
+                        android:id="@+id/col_date"
+                        android:layout_width="137dp"
+                        android:layout_height="wrap_content"
+                        android:text="Date"
+                        android:textSize="16sp" />
+                </TableRow>
+            </TableLayout>
+        </LinearLayout>
+    </ScrollView>
+
+    <Button
+        android:id="@+id/btn_stats"
+        android:layout_width="379dp"
+        android:layout_height="38dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginEnd="11dp"
-        android:layout_marginBottom="150dp"
-        android:text="TextView" />
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="-651dp"
+        android:layout_marginEnd="15dp"
+        android:layout_marginBottom="37dp"
+        android:background="#7FC1ED"
+        android:text="Learn more about your wastage" />
 
 </RelativeLayout>
