--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@color/colorBackground"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+
     tools:context=".SettingsPage">
 
     <TextView
@@ -23,6 +26,8 @@
         android:layout_marginTop="36dp"
         android:layout_marginHorizontal="26dp"
         android:text="Select Time"
+        android:backgroundTint="@color/colorTrendingStart"
+
         android:textSize="26dp"/>
 
     <Button
@@ -32,6 +37,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginHorizontal="26dp"
         android:text="Set Alarm"
+        android:backgroundTint="@color/colorTrendingStart"
         android:textSize="26dp"/>
 
     <Button
@@ -40,8 +46,27 @@
         android:layout_height="70dp"
         android:layout_marginTop="8dp"
         android:layout_marginHorizontal="26dp"
+        android:backgroundTint="@color/colorTrendingStart"
         android:text="Cancel Alarm"
         android:textSize="26dp"/>
+
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottomNavigationView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="170dp"
+        android:backgroundTint="@color/colorWhite"
+        app:itemIconSize="30dp"
+        app:labelVisibilityMode="unlabeled"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:menu="@menu/navigation_menu" />
+
+    <View
+        android:id="@+id/ViewDivider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/colorDivider"
+        app:layout_constraintBottom_toTopOf="@id/bottomNavigationView"/>
 
 
 
