--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -105,7 +105,7 @@
             android:layout_height="wrap_content">
 
             <LinearLayout
-                android:id="@+id/layoutAddFood"
+                android:id="@+id/money_stat"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="22dp"
@@ -147,7 +147,7 @@
                 android:orientation="vertical"
                 android:padding="15dp"
                 app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintStart_toEndOf="@id/layoutAddFood"
+                app:layout_constraintStart_toEndOf="@id/money_stat"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" >
 
@@ -182,7 +182,7 @@
                 app:layout_constraintDimensionRatio="1:1"
                 app:layout_constraintEnd_toStartOf="@id/layoutViewWaste"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/layoutAddFood">
+                app:layout_constraintTop_toBottomOf="@id/money_stat">
 
                 <ImageView
                     android:layout_width="100dp"
@@ -213,7 +213,7 @@
                 android:orientation="vertical"
                 android:padding="15dp"
                 app:layout_constraintDimensionRatio="1:1"
-                app:layout_constraintStart_toEndOf="@id/layoutAddFood"
+                app:layout_constraintStart_toEndOf="@id/money_stat"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/layoutViewWaste" >
 
@@ -243,7 +243,7 @@
                 android:background="@drawable/trending_background"
                 android:padding="20dp"
                 app:layout_constraintEnd_toEndOf="@id/layoutViewWebsite"
-                app:layout_constraintStart_toStartOf="@id/layoutAddFood"
+                app:layout_constraintStart_toStartOf="@id/money_stat"
                 app:layout_constraintTop_toBottomOf="@id/layoutViewNewsletter">
 
                 <TextView
