--- a/app/src/main/res/layout/fragment_fragment3.xml
+++ b/app/src/main/res/layout/fragment_fragment3.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment3">
+    tools:context=".FragmentThree">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -27,7 +27,7 @@
 
                 <ImageView
                     android:id="@+id/imageView"
-                    android:layout_width="420dp"
+                    android:layout_width="263dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     tools:src="@tools:sample/avatars" />
@@ -43,7 +43,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Product One"
+                        android:text="You have not added product"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -79,7 +79,7 @@
 
                 <ImageView
                     android:id="@+id/imageView2"
-                    android:layout_width="418dp"
+                    android:layout_width="257dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     tools:src="@tools:sample/avatars" />
@@ -95,7 +95,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Product Two"
+                        android:text="You have not added product"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -129,7 +129,7 @@
 
                 <ImageView
                     android:id="@+id/imageView3"
-                    android:layout_width="418dp"
+                    android:layout_width="263dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     tools:src="@tools:sample/avatars" />
@@ -145,7 +145,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="1dp"
                         android:layout_weight="1"
-                        android:text="Product Three"
+                        android:text="You have not added product"
                         android:textAlignment="center"
                         android:textSize="20sp"
                         android:textStyle="bold" />
@@ -153,7 +153,7 @@
                     <Button
                         android:id="@+id/btn_prod3"
                         android:layout_width="match_parent"
-                        android:layout_height="65dp"
+                        android:layout_height="26dp"
                         android:layout_weight="1"
                         android:text="Learn more about the product" />
 
