Finished up on all fragment details. Removed a few known bugs and print lines

--- a/app/src/main/res/layout/fragment_fragment2.xml
+++ b/app/src/main/res/layout/fragment_fragment2.xml
@@ -11,8 +11,7 @@
         android:layout_marginLeft="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginRight="10dp"
-        android:layout_height="471dp"
-        android:stroke="2dp"/>
+        android:layout_height="471dp"/>
 
 
 </FrameLayout>
