--- a/app/src/main/res/layout/fragment_fragment3.xml
+++ b/app/src/main/res/layout/fragment_fragment3.xml
@@ -12,8 +12,8 @@
 
         <LinearLayout
             android:id="@+id/product_one"
-            android:layout_width="384dp"
-            android:layout_height="153dp"
+            android:layout_width="385dp"
+            android:layout_height="130dp"
             android:layout_marginTop="68dp"
             android:orientation="vertical"
             app:layout_constraintEnd_toEndOf="parent"
@@ -22,11 +22,11 @@
 
             <LinearLayout
                 android:layout_width="380dp"
-                android:layout_height="150dp"
+                android:layout_height="125dp"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView"
+                    android:id="@+id/img_prod1"
                     android:layout_width="263dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
@@ -40,8 +40,8 @@
 
                     <TextView
                         android:id="@+id/prod1_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:layout_width="173dp"
+                        android:layout_height="5dp"
                         android:layout_weight="1"
                         android:text="You have not added product"
                         android:textAlignment="center"
@@ -51,9 +51,9 @@
                     <Button
                         android:id="@+id/btn_prod1"
                         android:layout_width="match_parent"
-                        android:layout_height="65dp"
+                        android:layout_height="18dp"
                         android:layout_weight="1"
-                        android:background="#494949"
+                        android:background='@drawable/trending_background'
                         android:text="Learn more about the product" />
 
                 </LinearLayout>
@@ -63,8 +63,8 @@
 
         <LinearLayout
             android:id="@+id/product_two"
-            android:layout_width="380dp"
-            android:layout_height="150dp"
+            android:layout_width="376dp"
+            android:layout_height="117dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toTopOf="@+id/product_three"
             app:layout_constraintEnd_toEndOf="parent"
@@ -74,25 +74,27 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="wrap_content"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView2"
-                    android:layout_width="257dp"
+                    android:id="@+id/img_prod2"
+                    android:layout_width="130dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
+                    android:maxWidth="250dp"
+                    android:maxHeight="150dp"
                     tools:src="@tools:sample/avatars" />
 
                 <LinearLayout
-                    android:layout_width="match_parent"
+                    android:layout_width="257dp"
                     android:layout_height="match_parent"
                     android:layout_weight="1"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/prod2_name"
-                        android:layout_width="match_parent"
+                        android:layout_width="177dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="You have not added product"
@@ -103,8 +105,9 @@
                     <Button
                         android:id="@+id/btn_prod2"
                         android:layout_width="match_parent"
-                        android:layout_height="87dp"
+                        android:layout_height="62dp"
                         android:layout_weight="1"
+                        android:background='@drawable/trending_background'
                         android:text="Learn more about the product" />
 
                 </LinearLayout>
@@ -114,8 +117,8 @@
 
         <LinearLayout
             android:id="@+id/product_three"
-            android:layout_width="379dp"
-            android:layout_height="144dp"
+            android:layout_width="386dp"
+            android:layout_height="131dp"
             android:orientation="vertical"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -128,22 +131,23 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/imageView3"
+                    android:id="@+id/img_prod3"
                     android:layout_width="263dp"
-                    android:layout_height="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_weight="1"
                     tools:src="@tools:sample/avatars" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="125dp"
                     android:layout_weight="1"
+                    android:backgroundTint="#239F5F"
                     android:orientation="vertical">
 
                     <TextView
                         android:id="@+id/prod3_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
+                        android:layout_width="167dp"
+                        android:layout_height="45dp"
                         android:layout_weight="1"
                         android:text="You have not added product"
                         android:textAlignment="center"
@@ -153,8 +157,9 @@
                     <Button
                         android:id="@+id/btn_prod3"
                         android:layout_width="match_parent"
-                        android:layout_height="26dp"
+                        android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:background='@drawable/trending_background'
                         android:text="Learn more about the product" />
 
                 </LinearLayout>
@@ -174,7 +179,7 @@
             android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/product_one"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.492"
+            app:layout_constraintHorizontal_bias="0.484"
             app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
